# lloom

./: .gitignore  Cargo.toml  EIP712_ACCOUNTING_SPECIFICATION.md  LICENSE  MODEL_ANNOUNCEMENT_PROTOCOL_DESIGN.md  README.md  SIGNING_DESIGN.md  TEST_SUMMARY.md  config.toml  faucet-config.toml  foundry.toml  validator-key.txt
.claude/agents/: devops-deployment-specialist.md  rust-mdbook-writer.md
.roo/: ACCOUNTING.md  ROO_CC.md
cache/: solidity-files-cache.json
contracts/: Accounting.sol
crates/crowd-models-accountant/: Cargo.toml
crates/crowd-models-accountant/src/: lib.rs  main.rs
crates/crowd-models-client/: Cargo.toml
crates/crowd-models-client/src/: lib.rs  main.rs
crates/crowd-models-core/: Cargo.toml
crates/crowd-models-core/src/: error.rs  identity.rs  lib.rs  network.rs  protocol.rs  signing.rs
crates/crowd-models-executor/: Cargo.toml  LMSTUDIO_SETUP.md  config.toml  config.toml.example  test_config.toml
crates/crowd-models-executor/examples/: test_lmstudio.rs  test_model_discovery.rs
crates/crowd-models-executor/src/: blockchain.rs  config.rs  lib.rs  llm_client.rs  main.rs
crates/faucet-server/: Cargo.toml  README.md  config.toml.example
crates/faucet-server/src/: config.rs  email.rs  error.rs  eth.rs  http.rs  lib.rs  main.rs  state.rs
crates/lloom-accountant/: Cargo.toml
crates/lloom-accountant/src/: lib.rs  main.rs
crates/lloom-client/: Cargo.toml
crates/lloom-client/src/: lib.rs  main.rs
crates/lloom-core/: Cargo.toml
crates/lloom-core/src/: eip712.rs  error.rs  identity.rs  lib.rs  network.rs  protocol.rs  signing.rs
crates/lloom-executor/: Cargo.toml  LMSTUDIO_SETUP.md  config.toml.example
crates/lloom-executor/examples/: model_discovery_demo.rs  test_lmstudio.rs  test_model_announcement.rs  test_model_discovery.rs
crates/lloom-executor/src/: blockchain.rs  config.rs  lib.rs  llm_client.rs  main.rs
crates/lloom-helper/: Cargo.toml
crates/lloom-helper/src/: main.rs
crates/lloom-validator/: Cargo.toml
crates/lloom-validator/src/: lib.rs  main.rs
docs/: book.toml
docs/dev/: book.toml
docs/dev/src/: SUMMARY.md
docs/dev/src/api/: client-library.md  core-library.md  network.md  protocol.md  validator-library.md
docs/dev/src/development/: building.md  contributing.md  release.md  testing.md
docs/dev/src/specs/: eip712-accounting.md  signing-design.md
docs/src/: SUMMARY.md
docs/src/api/: eip712.md  executor-library.md  identity.md  signing.md
docs/src/development/: building.md
docs/src/examples/: network-discovery.md
docs/src/getting-started/: development-environment.md
docs/src/reference/: configuration.md  environment.md  errors.md
docs/src/specs/: network-protocol.md  protocol-structures.md
docs/src/technology/: architecture.md  eip712-signing.md  llm-backends.md  p2p-networking.md  smart-contracts.md
docs/src/user-manual/: executor.md  troubleshooting.md  validator.md
docs/user/: book.toml
docs/user/src/: SUMMARY.md  introduction.md
docs/user/src/examples/: basic-client.md  custom-executor.md  smart-contracts.md
docs/user/src/getting-started/: configuration.md  installation.md  quick-start.md  testnet.md
docs/user/src/reference/: glossary.md
docs/user/src/user-manual/: client.md  monitoring.md
ethnode/: README.md  VALIDATION_REPORT.md  docker-compose.yml  prometheus.yml  transfer_test_funds.sh
ethnode/grafana/dashboards/: reth-overview.json
scripts/: README.md  deploy.sh  mock-llm-server.py  test-model-announcement.sh
solidity/src/: Accounting.sol  ECDSA.sol
solidity/test/: AccountingV2.t.sol
