[workspace]
members = [
    "crates/lloom-core",
    "crates/lloom-client",
    "crates/lloom-executor",
    "crates/lloom-accountant",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Lloom Team"]
license = "MIT"
repository = "https://github.com/lloom/lloom"

[workspace.dependencies]
# Core dependencies
libp2p = { version = "0.56", features = ["tokio", "gossipsub", "mdns", "kad", "request-response", "noise", "yamux", "tcp", "macros", "secp256k1"] }
tokio = { version = "1.41", features = ["full"] }
alloy = { version = "1.0.23", features = ["full", "node-bindings"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }

# Additional dependencies
futures = "0.3"
bytes = "1.8"
async-trait = "0.1"
thiserror = "2.0"
config = "0.14"
directories = "5.0"
hex = "0.4"
rand = "0.8"

# Testing dependencies
tokio-test = "0.4"
mockall = "0.13"
wiremock = "0.6"
tempfile = "3.0"
