[package]
name = "crowd-models-accountant"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "crowd-models-accountant"
path = "src/main.rs"

[dependencies]
# Core library
crowd-models-core = { path = "../crowd-models-core" }

# Async runtime
tokio.workspace = true
futures.workspace = true

# CLI
clap.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
anyhow.workspace = true

# P2P networking
libp2p.workspace = true

# Additional dependencies
hex.workspace = true

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
tempfile.workspace = true