[package]
name = "lloom-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "lloom-client"
path = "src/main.rs"

[dependencies]
# Core library
lloom-core = { path = "../lloom-core" }

# P2P networking
libp2p = { workspace = true, features = ["request-response", "kad", "gossipsub", "noise", "yamux", "tcp", "macros"] }

# Async runtime
tokio.workspace = true
futures.workspace = true

# CLI
clap.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
tempfile.workspace = true