[package]
name = "lloom-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Client library and CLI tool for requesting LLM services from the Lloom P2P network"
documentation = "https://docs.rs/lloom-client"
keywords = ["p2p", "llm", "client", "cli", "ai"]
categories = ["command-line-utilities", "network-programming", "web-programming"]

[[bin]]
name = "lloom-client"
path = "src/main.rs"

[dependencies]
# Core library
lloom-core = { path = "../lloom-core" }

# P2P networking
libp2p = { workspace = true, features = ["request-response", "kad", "gossipsub", "noise", "yamux", "tcp", "macros"] }

# Async runtime
tokio.workspace = true
futures.workspace = true

# CLI
clap.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml = "0.8"
chrono.workspace = true
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
tempfile.workspace = true