[package]
name = "lloom-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core functionality for the Lloom P2P network including identity management, networking protocols, and cryptographic signing"
documentation = "https://docs.rs/lloom-core"
keywords = ["p2p", "llm", "blockchain", "libp2p", "eip712"]
categories = ["network-programming", "cryptography", "web-programming"]

[dependencies]
# P2P networking
libp2p = { workspace = true, features = ["request-response", "kad", "gossipsub", "noise", "yamux", "tcp", "macros", "cbor"] }

# Async runtime
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Blockchain integration
alloy.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true

# Error handling and utilities
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Cryptography
hex.workspace = true
rand.workspace = true
k256.workspace = true

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
tempfile.workspace = true