[package]
name = "lloom-executor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Executor library and service for providing LLM services in the Lloom P2P network"
documentation = "https://docs.rs/lloom-executor"
keywords = ["p2p", "llm", "executor", "service", "ai"]
categories = ["network-programming", "web-programming", "api-bindings"]

[[bin]]
name = "lloom-executor"
path = "src/main.rs"

[dependencies]
# Core library
lloom-core = { path = "../lloom-core" }

# P2P networking
libp2p.workspace = true

# Blockchain integration
alloy.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# CLI
clap.workspace = true

# Configuration
config.workspace = true
directories.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# HTTP client for OpenAI
reqwest.workspace = true

# Token counting
tiktoken-rs.workspace = true

# Utilities
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
toml.workspace = true

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
wiremock.workspace = true
tempfile.workspace = true