[package]
name = "lloom-helper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lloom-helper"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
hex = "0.4"
lloom-core = { path = "../lloom-core" }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
serde_json = "1.0"